<resources>
    <string name="app_name">One UI App</string>
    <string name="drawer_scroll">Scroll Screen</string>
    <string name="drawer_settings">Settings</string>
    <string name="lang_label">Language:</string>
    <string name="lang_english">English</string>
    <string name="lang_arabic">Arabic</string>
    <string name="theme_label">Theme:</string>
    <string name="dark_mode_label">Dark Mode</string>
    <string name="light_mode_label">Light Mode</string>
    <string name="test_notification_button">Test Notification</string>
    <string name="notification_title">Test Notification</string>
    <string name="notification_content">This is a test notification from the app.</string>
</resources>
